# Yet-Another-3D-Voxel-Engine

./: Cargo.toml  LICENSE  README.md  config.toml
assets/blocks/: blocks.json
assets/textures/: README.md  textures.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/tests/: snapshots.rs
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: block.rs  camera.rs  constants.rs  lib.rs  math.rs
crates/ecs/: Cargo.toml
crates/ecs/src/: archetype.rs  component.rs  entity.rs  lib.rs  query.rs  resources.rs  schedule.rs  world.rs
crates/ecs/tests/: smoke.rs
crates/engine/: Cargo.toml
crates/engine/src/: commands.rs  frame.rs  keybinds.rs  lib.rs  save.rs  settings.rs  ui.rs
crates/game/: Cargo.toml
crates/game/src/: block.rs  chat.rs  input.rs  inv.rs  lib.rs  player.rs  undo.rs
crates/game/src/components/: aabb.rs  camera_owner.rs  mod.rs  player_input.rs  player_state.rs  transform.rs  velocity.rs
crates/game/src/systems/: input_system.rs  lifecycle_system.rs  mod.rs  movement_system.rs
crates/physics/: Cargo.toml
crates/physics/src/: lib.rs
crates/render/: Cargo.toml  build.rs
crates/render/src/: alloc.rs  atlas.rs  buffer.rs  lib.rs  renderer.rs  texture.rs  ui.rs
crates/render/tests/: smoke.rs
crates/world/: Cargo.toml
crates/world/proptest-regressions/: registry.txt
crates/world/src/: chunk.rs  gen.rs  lib.rs  light.rs  mesh.rs  registry.rs  save.rs  stream.rs  water.rs  world.rs
shaders/: chunk.frag  chunk.vert  post.frag  post.vert  shadow.vert  sky.frag  sky.vert  ui.frag  ui.vert
