[package]
name = "voxel-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Executable entry point for the voxel sandbox."

[[bin]]
name = "voxel"
path = "src/main.rs"

[dependencies]
voxel-engine.workspace = true
voxel-core.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
clap.workspace = true

[dev-dependencies]
image.workspace = true
