[package]
name = "voxel-assets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Data-driven content registry: blocks, items, biomes, recipes, asset loading."

[dependencies]
voxel-core.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
anyhow.workspace = true
