[package]
name = "voxel-world"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Chunked voxel storage, terrain/biome/cave/ore generation, meshing, streaming."

[dependencies]
voxel-core.workspace = true
voxel-assets.workspace = true
rayon.workspace = true
parking_lot.workspace = true
flume.workspace = true
fastnoise-lite.workspace = true
glam.workspace = true
bytemuck.workspace = true
log.workspace = true
anyhow.workspace = true
flate2.workspace = true

[dev-dependencies]
proptest.workspace = true
